# hohohohohoho

./: pyproject.toml
myproject/: db.sqlite3
myproject/myproject/: settings.py  urls.py
myproject/users/: models.py  permissions.py  serializers.py  urls.py  views.py
myproject/users/migrations/: 0001_initial.py
